tests/valid_programs/never_type/never_type_2.duck
fn main() {
    (async (fn(i: ()){})(return));
}
