tests/errors/typechecker/require_duck_give_duck_with_missing_field.duck
fn myfn(x: { abc: {}, xyz: {} }) {}

fn main() {
    myfn({ abc: {} });
}
